--- a/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
+++ b/SantexAcademy/front/src/app/modules/home/home-page/home-page.component.html
@@ -32,7 +32,7 @@
               <!-- TARJETA BIENVENIDA  -->
               <div class="infocardContainer" style="margin-left: 150px;">
                 <div id="main">
-                  <img src="../../../../assets/img/foto_adm.png"  alt="Mi Imagen">
+                  <!-- <img src="../../../../assets/img/foto_adm.png"  alt="Mi Imagen"> -->
                 </div>
                 <div id="textbois">
                   <h1 style="color: black; margin-top: 40px;">Bienvenido, {{user.firstName}}</h1>
@@ -76,20 +76,20 @@
                 <img src="../../../../assets/img/dash_1.png" alt="Dashboard">
               </div>
               <div id="textbois">
-                <a class="a_button" href="#" target="_blank" style="color: black;">Dashboard</a>    
+                <a class="a_button" href="dashboard" target="_blank" style="color: black;">Dashboard</a>    
               </div>            
             </div> 
           </div>                     
 
           <!--  UBICACION    -->
-            <div class="infocardContainer_button">
+            <!-- <div class="infocardContainer_button">
               <div id="main_button">
                 <img src="../../../../assets/img/ubic_1.png" alt="Maps">
               </div>
               <div id="textbois">
                 <a class="a_button" href="#" target="_blank" style="color: black;">Ubicación</a>     
               </div>  
-            </div>
+            </div> -->
 
           <!--  CERRAR SESION    -->
             <div class="infocardContainer_button" (click)="logout()">
